stride.output
Terminals unused in grammar

    EQ
    NEQ
    LE
    GE


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program statement

    3 statement: assignment
    4          | if_stmt
    5          | while_stmt
    6          | action

    7 assignment: IDENTIFIER ASSIGN expression

    8 if_stmt: IF expression THEN stmt_list END
    9        | IF expression THEN stmt_list ELSE stmt_list END

   10 $@1: ε

   11 $@2: ε

   12 while_stmt: WHILE $@1 expression $@2 DO stmt_list END

   13 stmt_list: ε
   14          | stmt_list statement

   15 action: CORRA
   16       | PARE
   17       | ESPERE expression
   18       | MOSTRE expression

   19 expression: expr_add

   20 expr_add: expr_add '+' expr_mul
   21         | expr_add '-' expr_mul
   22         | expr_mul

   23 expr_mul: expr_mul '*' term
   24         | expr_mul '/' term
   25         | term

   26 term: NUMBER
   27     | IDENTIFIER
   28     | STRING


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 23
    '+' (43) 20
    '-' (45) 21
    '/' (47) 24
    error (256)
    ASSIGN (258) 7
    IF (259) 8 9
    THEN (260) 8 9
    ELSE (261) 9
    END (262) 8 9 12
    WHILE (263) 12
    DO (264) 12
    CORRA (265) 15
    PARE (266) 16
    ESPERE (267) 17
    MOSTRE (268) 18
    IDENTIFIER <str> (269) 7 27
    NUMBER <num> (270) 26
    STRING <str> (271) 28
    EQ (272)
    NEQ (273)
    LE (274)
    GE (275)


Nonterminals, with rules where they appear

    $accept (25)
        on left: 0
    program (26)
        on left: 1 2
        on right: 0 2
    statement (27)
        on left: 3 4 5 6
        on right: 2 14
    assignment (28)
        on left: 7
        on right: 3
    if_stmt (29)
        on left: 8 9
        on right: 4
    while_stmt (30)
        on left: 12
        on right: 5
    $@1 (31)
        on left: 10
        on right: 12
    $@2 (32)
        on left: 11
        on right: 12
    stmt_list (33)
        on left: 13 14
        on right: 8 9 12 14
    action (34)
        on left: 15 16 17 18
        on right: 6
    expression (35)
        on left: 19
        on right: 7 8 9 12 17 18
    expr_add (36)
        on left: 20 21 22
        on right: 19 20 21
    expr_mul (37)
        on left: 23 24 25
        on right: 20 21 22 23 24
    term (38)
        on left: 26 27 28
        on right: 23 24 25


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • statement

    $end        shift, and go to state 2
    IF          shift, and go to state 3
    WHILE       shift, and go to state 4
    CORRA       shift, and go to state 5
    PARE        shift, and go to state 6
    ESPERE      shift, and go to state 7
    MOSTRE      shift, and go to state 8
    IDENTIFIER  shift, and go to state 9

    statement   go to state 10
    assignment  go to state 11
    if_stmt     go to state 12
    while_stmt  go to state 13
    action      go to state 14


State 2

    0 $accept: program $end •

    $default  accept


State 3

    8 if_stmt: IF • expression THEN stmt_list END
    9        | IF • expression THEN stmt_list ELSE stmt_list END

    IDENTIFIER  shift, and go to state 15
    NUMBER      shift, and go to state 16
    STRING      shift, and go to state 17

    expression  go to state 18
    expr_add    go to state 19
    expr_mul    go to state 20
    term        go to state 21


State 4

   12 while_stmt: WHILE • $@1 expression $@2 DO stmt_list END

    $default  reduce using rule 10 ($@1)

    $@1  go to state 22


State 5

   15 action: CORRA •

    $default  reduce using rule 15 (action)


State 6

   16 action: PARE •

    $default  reduce using rule 16 (action)


State 7

   17 action: ESPERE • expression

    IDENTIFIER  shift, and go to state 15
    NUMBER      shift, and go to state 16
    STRING      shift, and go to state 17

    expression  go to state 23
    expr_add    go to state 19
    expr_mul    go to state 20
    term        go to state 21


State 8

   18 action: MOSTRE • expression

    IDENTIFIER  shift, and go to state 15
    NUMBER      shift, and go to state 16
    STRING      shift, and go to state 17

    expression  go to state 24
    expr_add    go to state 19
    expr_mul    go to state 20
    term        go to state 21


State 9

    7 assignment: IDENTIFIER • ASSIGN expression

    ASSIGN  shift, and go to state 25


State 10

    2 program: program statement •

    $default  reduce using rule 2 (program)


State 11

    3 statement: assignment •

    $default  reduce using rule 3 (statement)


State 12

    4 statement: if_stmt •

    $default  reduce using rule 4 (statement)


State 13

    5 statement: while_stmt •

    $default  reduce using rule 5 (statement)


State 14

    6 statement: action •

    $default  reduce using rule 6 (statement)


State 15

   27 term: IDENTIFIER •

    $default  reduce using rule 27 (term)


State 16

   26 term: NUMBER •

    $default  reduce using rule 26 (term)


State 17

   28 term: STRING •

    $default  reduce using rule 28 (term)


State 18

    8 if_stmt: IF expression • THEN stmt_list END
    9        | IF expression • THEN stmt_list ELSE stmt_list END

    THEN  shift, and go to state 26


State 19

   19 expression: expr_add •
   20 expr_add: expr_add • '+' expr_mul
   21         | expr_add • '-' expr_mul

    '+'  shift, and go to state 27
    '-'  shift, and go to state 28

    $default  reduce using rule 19 (expression)


State 20

   22 expr_add: expr_mul •
   23 expr_mul: expr_mul • '*' term
   24         | expr_mul • '/' term

    '*'  shift, and go to state 29
    '/'  shift, and go to state 30

    $default  reduce using rule 22 (expr_add)


State 21

   25 expr_mul: term •

    $default  reduce using rule 25 (expr_mul)


State 22

   12 while_stmt: WHILE $@1 • expression $@2 DO stmt_list END

    IDENTIFIER  shift, and go to state 15
    NUMBER      shift, and go to state 16
    STRING      shift, and go to state 17

    expression  go to state 31
    expr_add    go to state 19
    expr_mul    go to state 20
    term        go to state 21


State 23

   17 action: ESPERE expression •

    $default  reduce using rule 17 (action)


State 24

   18 action: MOSTRE expression •

    $default  reduce using rule 18 (action)


State 25

    7 assignment: IDENTIFIER ASSIGN • expression

    IDENTIFIER  shift, and go to state 15
    NUMBER      shift, and go to state 16
    STRING      shift, and go to state 17

    expression  go to state 32
    expr_add    go to state 19
    expr_mul    go to state 20
    term        go to state 21


State 26

    8 if_stmt: IF expression THEN • stmt_list END
    9        | IF expression THEN • stmt_list ELSE stmt_list END

    $default  reduce using rule 13 (stmt_list)

    stmt_list  go to state 33


State 27

   20 expr_add: expr_add '+' • expr_mul

    IDENTIFIER  shift, and go to state 15
    NUMBER      shift, and go to state 16
    STRING      shift, and go to state 17

    expr_mul  go to state 34
    term      go to state 21


State 28

   21 expr_add: expr_add '-' • expr_mul

    IDENTIFIER  shift, and go to state 15
    NUMBER      shift, and go to state 16
    STRING      shift, and go to state 17

    expr_mul  go to state 35
    term      go to state 21


State 29

   23 expr_mul: expr_mul '*' • term

    IDENTIFIER  shift, and go to state 15
    NUMBER      shift, and go to state 16
    STRING      shift, and go to state 17

    term  go to state 36


State 30

   24 expr_mul: expr_mul '/' • term

    IDENTIFIER  shift, and go to state 15
    NUMBER      shift, and go to state 16
    STRING      shift, and go to state 17

    term  go to state 37


State 31

   12 while_stmt: WHILE $@1 expression • $@2 DO stmt_list END

    $default  reduce using rule 11 ($@2)

    $@2  go to state 38


State 32

    7 assignment: IDENTIFIER ASSIGN expression •

    $default  reduce using rule 7 (assignment)


State 33

    8 if_stmt: IF expression THEN stmt_list • END
    9        | IF expression THEN stmt_list • ELSE stmt_list END
   14 stmt_list: stmt_list • statement

    IF          shift, and go to state 3
    ELSE        shift, and go to state 39
    END         shift, and go to state 40
    WHILE       shift, and go to state 4
    CORRA       shift, and go to state 5
    PARE        shift, and go to state 6
    ESPERE      shift, and go to state 7
    MOSTRE      shift, and go to state 8
    IDENTIFIER  shift, and go to state 9

    statement   go to state 41
    assignment  go to state 11
    if_stmt     go to state 12
    while_stmt  go to state 13
    action      go to state 14


State 34

   20 expr_add: expr_add '+' expr_mul •
   23 expr_mul: expr_mul • '*' term
   24         | expr_mul • '/' term

    '*'  shift, and go to state 29
    '/'  shift, and go to state 30

    $default  reduce using rule 20 (expr_add)


State 35

   21 expr_add: expr_add '-' expr_mul •
   23 expr_mul: expr_mul • '*' term
   24         | expr_mul • '/' term

    '*'  shift, and go to state 29
    '/'  shift, and go to state 30

    $default  reduce using rule 21 (expr_add)


State 36

   23 expr_mul: expr_mul '*' term •

    $default  reduce using rule 23 (expr_mul)


State 37

   24 expr_mul: expr_mul '/' term •

    $default  reduce using rule 24 (expr_mul)


State 38

   12 while_stmt: WHILE $@1 expression $@2 • DO stmt_list END

    DO  shift, and go to state 42


State 39

    9 if_stmt: IF expression THEN stmt_list ELSE • stmt_list END

    $default  reduce using rule 13 (stmt_list)

    stmt_list  go to state 43


State 40

    8 if_stmt: IF expression THEN stmt_list END •

    $default  reduce using rule 8 (if_stmt)


State 41

   14 stmt_list: stmt_list statement •

    $default  reduce using rule 14 (stmt_list)


State 42

   12 while_stmt: WHILE $@1 expression $@2 DO • stmt_list END

    $default  reduce using rule 13 (stmt_list)

    stmt_list  go to state 44


State 43

    9 if_stmt: IF expression THEN stmt_list ELSE stmt_list • END
   14 stmt_list: stmt_list • statement

    IF          shift, and go to state 3
    END         shift, and go to state 45
    WHILE       shift, and go to state 4
    CORRA       shift, and go to state 5
    PARE        shift, and go to state 6
    ESPERE      shift, and go to state 7
    MOSTRE      shift, and go to state 8
    IDENTIFIER  shift, and go to state 9

    statement   go to state 41
    assignment  go to state 11
    if_stmt     go to state 12
    while_stmt  go to state 13
    action      go to state 14


State 44

   12 while_stmt: WHILE $@1 expression $@2 DO stmt_list • END
   14 stmt_list: stmt_list • statement

    IF          shift, and go to state 3
    END         shift, and go to state 46
    WHILE       shift, and go to state 4
    CORRA       shift, and go to state 5
    PARE        shift, and go to state 6
    ESPERE      shift, and go to state 7
    MOSTRE      shift, and go to state 8
    IDENTIFIER  shift, and go to state 9

    statement   go to state 41
    assignment  go to state 11
    if_stmt     go to state 12
    while_stmt  go to state 13
    action      go to state 14


State 45

    9 if_stmt: IF expression THEN stmt_list ELSE stmt_list END •

    $default  reduce using rule 9 (if_stmt)


State 46

   12 while_stmt: WHILE $@1 expression $@2 DO stmt_list END •

    $default  reduce using rule 12 (while_stmt)
